[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/map/roads/bosses/road_boss_instance.png" type="Texture" id=1]
[ext_resource path="res://scripts/BossRoad.gd" type="Script" id=2]
[ext_resource path="res://assets/alerts/alert1.png" type="Texture" id=3]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("spawners/LeftSpawner/AlertSpawner/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "alert"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("spawners/LeftSpawner/AlertSpawner/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.35, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 3, 2, 1, 2, 3, 4, 3, 2, 1, 2, 3, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AlertSpawner/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "alert"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AlertSpawner/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.35, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 3, 2, 1, 2, 3, 4, 3, 2, 1, 2, 3, 4, 3, 2, 1, 0 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 8 )

[node name="BossRoad" type="Node2D"]
z_index = -1
script = ExtResource( 2 )

[node name="Road" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="spawners" type="Node2D" parent="."]

[node name="LeftSpawner" type="Node2D" parent="spawners"]

[node name="LeftAnim" type="AnimationPlayer" parent="spawners/LeftSpawner"]
root_node = NodePath("../../..")
anims/RESET = SubResource( 2 )
anims/alert = SubResource( 3 )

[node name="BossSpawner" type="Position2D" parent="spawners/LeftSpawner"]
position = Vector2( -72, 0 )

[node name="AlertSpawner" type="Position2D" parent="spawners/LeftSpawner"]
position = Vector2( -56, 0 )

[node name="Sprite" type="Sprite" parent="spawners/LeftSpawner/AlertSpawner"]
texture = ExtResource( 3 )
hframes = 5

[node name="RightSpawner" type="Node2D" parent="spawners"]

[node name="RightAnim" type="AnimationPlayer" parent="spawners/RightSpawner"]
anims/RESET = SubResource( 4 )
anims/alert = SubResource( 5 )

[node name="BossSpawner" type="Position2D" parent="spawners/RightSpawner"]
position = Vector2( 72, 0 )

[node name="AlertSpawner" type="Position2D" parent="spawners/RightSpawner"]
position = Vector2( 56, 0 )

[node name="Sprite" type="Sprite" parent="spawners/RightSpawner/AlertSpawner"]
texture = ExtResource( 3 )
hframes = 5

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="spawners/LeftSpawner/LeftAnim" to="." method="_on_LeftAnim_animation_finished"]
[connection signal="animation_finished" from="spawners/RightSpawner/RightAnim" to="." method="_on_RightAnim_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
